<resources>
    <string name="app_name">ABC</string>
    <string name="abc_auto_valuers">ABC AUTO VALUERS</string>
    <string name="enter_details_prompt">Please provide the following personal details</string>
    <string name="surname">Surname</string>
    <string name="fast_reliable_efficient">FAST, RELIABLE &amp; EFFICIENT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number(07…)</string>
    <string name="email">Email</string>
    <string name="id_number">ID Number</string>
    <string name="county">County</string>
    <string name="residential_information">Residential Information</string>
    <string name="town">Town</string>
    <string name="next">Next</string>
    <string name="car_prompt">Add your car(s) details</string>
    <string name="plate_number">Plate Number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome</string>
    <string name="client_added">Your details were successfully added. Proceed to schedule a valuation.</string>
    <string name="schedule_valuation">Schedule Valuation</string>
    <string name="select_the_car_you_want_valuated">Select the car you want valuated</string>
    <string name="provide_details">Please provide the following details.</string>
    <string name="plate_number_custom">KAU 341Q</string>
    <string name="client_details">Client Details</string>
    <string name="valuation_location_details">Valuation location Details</string>
    <string name="textLocationDetails">Please provide more details on the location the valuation should take place.</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="textRelevantDetails">Please provide any other information that may be relevant to the valuer</string>
    <string name="splash_screen_prompt">Book your valuation within a minute and our valuer will be with you as soon as requested</string>
    <string name="text_setup">Please take time and fill the details for better services. Note that any data provided will be stored in your phone and only made available to us only when you request for a valuation.</string>
    <string name="setup">Setup</string>
    <string name="added_prompt">You successfully booked a valuation. Expect a call from us soon. Please remember to have a copy of your log book, KRA Pin and Identification Card with you during the valuation</string>
    <string name="add_plate">Add Plate Number</string>
    <string name="my_policy_status">My Policy Status</string>
    <string name="insurance_covers">Purchase Insurance</string>
    <string name="assessment">Assessment</string>
    <string name="request_quote">Request Quote</string>
    <string name="road_side_assistance">Road Side Assistance</string>
    <string name="dashboard">Dashboard</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="client_name">Client Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="call">Click below to directly call one of our agents  for any assistance</string>
    <string name="phone_2">0738094302</string>
    <string name="phone_1">0798902605</string>
    <string name="phone">Phone</string>
    <string name="call_permission">\"You have not given the app permission to make calls. Click on the phone number to grant permission to the app \"</string>
    <string name="logo">logo</string>
    <string name="motor_insurance">Motor Insurance</string>
    <string name="life_insurance">life Insurance</string>
    <string name="domestic_insurance">Domestic Insurance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="investment_insurance">Investment Insurance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valuation_date_and_time_details">Valuation date and time details</string>
    <string name="road_side_prompt">Please provide the following details for assistance</string>
    <string name="location_description">Location Description</string>
    <string name="issue">What\'s the issue</string>
    <string name="request_assistance">Request Assistance</string>
    <string name="_2021_abc_auto_valuers">© 2021. ABC AUTO VALUERS</string>
    <string name="purchase_motor_insurance">Purchase Motor Insurance</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="day_of_commencement">Day of Commencement</string>
    <string name="purchase">Purchase</string>
    <string name="spinner_error">Spinner Error</string>
    <string name="select_field">Please select a field</string>
</resources>