<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboardFragment"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/nav_policy_status"
            android:title="@string/my_policy_status"/>

        <item
            android:id="@+id/assessment"
            android:title="@string/assessment"/>

        <item
            android:id="@+id/quote"
            android:title="@string/request_quote"/>

        <item
            android:id="@+id/roadSideFragment"
            android:title="@string/road_side_assistance"/>

        <item
            android:title="@string/insurance_covers">

            <menu>
                <item
                    android:id="@+id/motor"
                    android:title="@string/motor_insurance"/>
                <item
                    android:id="@+id/life"
                    android:title="@string/life_insurance"/>

                <item
                    android:id="@+id/domestic"
                    android:title="@string/domestic_insurance"/>

                <item
                    android:id="@+id/health"
                    android:title="@string/health_insurance"/>

                <item
                    android:id="@+id/Investment"
                    android:title="@string/investment_insurance"/>

            </menu>
        </item>




    </group>

</menu>