<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".fragments.DashboardFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />


        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />


        <TextView
            android:layout_width="0dp"
            android:id="@+id/addedPrompt"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/added_prompt"
            android:background="@color/success"
            android:visibility="gone"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:padding="20dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <RelativeLayout
            android:id="@+id/schedule"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedPrompt"
            app:layout_constraintVertical_bias="0.100000024">


            <TextView
                android:id="@+id/scheduleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_black"
                android:padding="10dp"
                android:text="@string/schedule_valuation"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scheduleText"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/car_prompt"
                android:src="@drawable/car_convertible" />


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>