<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context="fragments.scheduleValuation.ScheduleVenueDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_italic"
            android:textSize="12sp"
            android:layout_marginStart="-10dp"
            android:text="@string/provide_details"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="200dp"
            android:id="@+id/plate_display"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_background"
            app:layout_constraintTop_toBottomOf="@id/textViewInfo"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft">

            <TextView
                android:id="@+id/scheduleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_black"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:text="@string/plate_number_custom"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="14sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/textClientPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_italic"
            android:textSize="12sp"
            android:layout_marginStart="-10dp"
            android:text="@string/valuation_location_details"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/plate_display"/>

        <EditText
            android:id="@+id/editTextCounty"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_inputs"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/county"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textClientPrompt" />

        <EditText
            android:id="@+id/editTextTown"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_inputs"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/town"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/editTextCounty" />

        <EditText
            android:id="@+id/editTextLocationDetails"
            android:background="@drawable/custom_inputs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/textLocationDetails"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:minLines="10"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/editTextTown"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/editTextLocationDetails"
            app:layout_constraintVertical_bias="0.22000003">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenterButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/custom_button_cancel"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="9dp"
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineCenterButtons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="9dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guidelineCenterButtons"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>