<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            tools:context="fragments.scheduleValuation.ScheduleDayFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat_italic"
                android:text="@string/provide_details"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/plate_display"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/linear_background"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/textViewInfo">

                <TextView
                    android:id="@+id/plateNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_black"
                    android:padding="10dp"
                    android:text="@string/plate_number_custom"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />


            </RelativeLayout>


            <TextView
                android:id="@+id/textClientPrompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_italic"
                android:text="@string/valuation_location_details"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/plate_display" />

            <TextView
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/custom_inputs"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textClientPrompt" />


            <EditText
                android:id="@+id/editTextRelevantDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/custom_inputs"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="start|top"
                android:hint="@string/textRelevantDetails"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/editTextDate" />

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/editTextRelevantDetails"
                app:layout_constraintVertical_bias="0.22000003">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineCenterButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/custom_button_cancel"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="9dp"
                        android:text="@string/cancel"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterButtons"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
                        android:id="@+id/buttonNext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="9dp"
                        android:text="@string/finish"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guidelineCenterButtons"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="invisible"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/editTextRelevantDetails" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>